--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="text" id="gif-input">
             <br/>
             <br/>
-            <input id="addGif" type="submit" class="gif-btn submitButton" value="Search" div class="gifygify">
+            <input id="addGif" type="submit" class="gif-btn submitButton" value="Add Gif">
         </form>
        
 
