--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input type="text" id="gif-input">
             <br/>
            
-            <input id="addGif" type="submit" class="gif-btn submitButton" value="Add Gif">
+            <input id="addGif" type="submit" class="gif-btn submitButton" value="SUBMIT GIF!">
         </form>
        <br>
        <br>
